[package]
name = "actix-experiment"
version = "0.1.0"
authors = ["LimingJiang <limingj@securelogicgroup.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.9.0"
rand = "0.7.3"
quick-error = "1.2.3"
futures = "0.3.4"